# mp3tags_r

./: Cargo.toml  LICENSE  README.md
examples/: handle_directory.rs  read_tag.rs  tag_manager.rs  write_tag.rs
src/: error.rs  file_access.rs  lib.rs  meta_entry.rs  tag.rs  util.rs  validation.rs
src/ape/: common.rs  mod.rs  reader.rs  writer.rs
src/ape/tag/: constants.rs  item.rs  mod.rs  tag.rs
src/id3/: common.rs  constants.rs  mod.rs
src/id3/common/: mod.rs
src/id3/v1/: constants.rs  meta_entry.rs  mod.rs  tag.rs
src/id3/v2/: common.rs  constants.rs  frame.rs  frame_mapping.rs  header.rs  meta_entry.rs  mod.rs  tag.rs  util.rs  version.rs
src/tests/: ape_tests.rs  blackbox_security_tests.rs  id3v1_tests.rs  id3v2_tests.rs  mod.rs  property_based_tests.rs  simple_tests.rs  tag_tests.rs
src/util/: file_utils.rs
